; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/mtd/nand/extr_ar934x_nfc.c_ar934x_nfc_write_cmd_reg.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/mtd/nand/extr_ar934x_nfc.c_ar934x_nfc_write_cmd_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar934x_nfc = type { i32 }

@AR934X_NFC_REG_CMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ar934x_nfc*, i32)* @ar934x_nfc_write_cmd_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar934x_nfc_write_cmd_reg(%struct.ar934x_nfc* %0, i32 %1) #0 {
  %3 = alloca %struct.ar934x_nfc*, align 8
  %4 = alloca i32, align 4
  store %struct.ar934x_nfc* %0, %struct.ar934x_nfc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @wmb()
  %6 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %3, align 8
  %7 = load i32, i32* @AR934X_NFC_REG_CMD, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @ar934x_nfc_wr(%struct.ar934x_nfc* %6, i32 %7, i32 %8)
  %10 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %3, align 8
  %11 = load i32, i32* @AR934X_NFC_REG_CMD, align 4
  %12 = call i32 @ar934x_nfc_rr(%struct.ar934x_nfc* %10, i32 %11)
  ret void
}

declare dso_local i32 @wmb(...) #1

declare dso_local i32 @ar934x_nfc_wr(%struct.ar934x_nfc*, i32, i32) #1

declare dso_local i32 @ar934x_nfc_rr(%struct.ar934x_nfc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
